--- a/style.css
+++ b/style.css
@@ -4,10 +4,14 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 body {
     overflow-x: hidden;
+    overflow-y: scroll;
     background-color: rgb(0, 0, 0);
 }
 
@@ -20,8 +24,7 @@ h1{
     text-decoration: none;
 }
 .topholder{
-    position: fixed;
-    top: 0;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,6 +40,7 @@ h1{
     align-items: center;
     padding-top: 10px;
     background-color: rgba(242,236,24,255);
+    height: 75px;
 }
 
 .logo{
@@ -49,13 +53,21 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: yellow;
-    width: 100%;
+    background-color: rgba(242,236,24,255);;
+    width: 102%;
     height: 50px;
     text-align: center;
-
+    z-index: 2000;
+    max-width: 500px;
     position: fixed;
     bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
+
+.request:hover{
+    background-color: black;
+    color: rgba(242,236,24,255);
 }
 
 .request:active{
@@ -69,12 +81,13 @@ h1{
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    height: 55px;
+    height: 50px;
     background-color: grey;
 }
 
 .navbutton{
     display: flex;
+    width: 120px;
     justify-content: center;
     align-items: center;
     color: white;
@@ -87,13 +100,11 @@ h1{
 }
 
 .mainbody{
-    position: absolute;
-    top: 185px;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     width: 100%;
+    padding-bottom: 50px;
 }
 
 .bodycard{
@@ -102,7 +113,7 @@ h1{
     align-items: center;
     flex-direction: column;
     width: 100%;
-    
+    max-width: 500px;
     background-size: cover;
 }
 
@@ -112,7 +123,7 @@ h1{
     align-items: center;
     font-size: 18px;
     font-weight: bold;
-    height: 60px;
+    height: 160px;
     width: 100%;
     background-color: rgba(161, 161, 161, 0.808);
 }
@@ -120,16 +131,18 @@ h1{
 .bodycardtextholder{
     display: flex;
     justify-content: center;
-    align-items: center;
     width: 100%;
     padding: 15px 0 15px 0;
     background-color: rgb(226, 226, 226);
+    overflow: hidden;
+    z-index: 60;
 }
 
 .bodycardtext{
     width: 80%;
     max-width: 700px;
     margin: 10px;
+    z-index: 50;
 }
 
 #card1{
@@ -142,4 +155,26 @@ h1{
 
 #card3{
     background-image: url('images/vbs_desc3.jpg');
+}
+
+.expanded{
+    height: 100%;
+    transition: .5s;
+}
+
+.collapsed{
+    height: 75px;
+    transition: .5s;
+}
+
+.survey{
+    width: 80vw;
+}
+
+iframe {
+    height:100%;
+    width: 90vw;
+    overflow: scroll;
+    scrollbar-color: red orange;
+    scrollbar-width: thin;
 }
