--- a/style.css
+++ b/style.css
@@ -22,25 +22,47 @@ a{
 
 h1{
     text-decoration: none;
+    color: black;
 }
 .topholder{
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
+    width: 100%;
+    background-color: rgba(242,236,24,255);
+    z-index: 100;
+}
+
+.topholder.desktop{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    padding: 0;
     width: 100%;
     z-index: 100;
 }
 
 .logoHolder{
-    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     padding-top: 10px;
     background-color: rgba(242,236,24,255);
     height: 75px;
+}
+
+.logoHolder.desktop{
+    width: 250px;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    background-color: rgba(242,236,24,255);
+    height: 100px; 
+    padding: 0 0 0 25px;
 }
 
 .logo{
@@ -58,16 +80,30 @@ h1{
     height: 50px;
     text-align: center;
     z-index: 2000;
-    max-width: 500px;
     position: fixed;
     bottom: 0;
     left: 50%;
     transform: translate(-50%, 0%);
 }
 
+.request.desktop{
+    position: relative;
+    width: 200px;
+    margin: 0 50px 0 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    height: 50px;
+    background-color: rgba(242,236,24,255);
+    transition: .3s;
+}
+
 .request:hover{
     background-color: black;
     color: rgba(242,236,24,255);
+    transition: .3s;
+    width: 250px;
 }
 
 .request:active{
@@ -82,12 +118,22 @@ h1{
     align-items: center;
     flex-direction: row;
     height: 50px;
-    background-color: grey;
+    background-color: rgba(242,236,24,255);
+    color: black;
+}
+
+.navbar.desktop{
+    display: flex;
+    width: auto;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    height: 100px;
 }
 
 .navbutton{
     display: flex;
-    width: 120px;
+    width: 80px;
     justify-content: center;
     align-items: center;
     color: white;
@@ -95,6 +141,31 @@ h1{
     height: 100%;
 }
 
+.navbutton.desktop{
+    display: flex;
+    width: 120px;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    padding: 0px 10px 0px 10px;
+    height: 100%;
+    transition: .3s;
+}
+
+.navbutton h1:active{
+    color: white;
+}
+
+.navbutton.desktop:hover{
+    color: white;
+    width: 170px;
+    background-color: grey;
+    transition: .3s;
+}
+
+.navbutton:hover{
+    color: darkgrey;
+}
 .navbutton:active{
     color: black;
 }
@@ -113,7 +184,7 @@ h1{
     align-items: center;
     flex-direction: column;
     width: 100%;
-    max-width: 500px;
+
     background-size: cover;
 }
 
