--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ html, body {
 body {
     overflow-x: hidden;
     overflow-y: scroll;
-    background-color: rgb(0, 0, 0);
 }
 
 a{
@@ -38,7 +37,7 @@ h1{
 .topholder.desktop{
     position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
     padding: 0;
@@ -63,19 +62,39 @@ h1{
     background-color: rgba(242,236,24,255);
     height: 100px; 
     padding: 0 0 0 25px;
+    transition: .3s;
 }
+
+div.logoHolder.desktop:hover{
+    width: 260px;
+    background-color: rgb(247, 247, 247);
+    transition: .3s;
+}
+
 
 .logo{
     margin-top: 10px;
     width: 90%;
     max-width: 250px;
+    padding-left: 10px;
+}
+
+@keyframes requestblink {
+    0%{background-color: rgba(255, 250, 96)}
+    25%{background-color: rgba(255, 250, 96)}
+    50%{background-color: rgb(247, 244, 168)}
+    75%{background-color: rgba(255, 250, 96)}
+    100%{background-color: rgba(255, 250, 96)}
 }
 
 .request{
+    animation: requestblink infinite 5s;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(242,236,24,255);;
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: rgba(242,236,24,255);
     width: 102%;
     height: 50px;
     text-align: center;
@@ -88,22 +107,25 @@ h1{
 
 .request.desktop{
     position: relative;
-    width: 200px;
-    margin: 0 50px 0 0px;
+    width: 18vw;
+    max-width: 200px;
+    margin: 0 0px 0 0px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
     height: 50px;
+    border-radius: 5px;
     background-color: rgba(242,236,24,255);
     transition: .3s;
 }
 
 .request:hover{
-    background-color: black;
+    background-color: black !important;
     color: rgba(242,236,24,255);
     transition: .3s;
-    width: 250px;
+    width: 19vw;
+    max-width: 210px;
 }
 
 .request:active{
@@ -111,14 +133,47 @@ h1{
     color: white;
 }
 
+@keyframes slideinhome{
+    0%{transform: translate(-50%, 0%);}
+    100%{transform: translate(0%, 0%);}
+}
+
+@keyframes slideintop{
+    0%{
+        transform: translate(0%, -100%);
+        opacity: 0;
+    }
+    100%{
+        transform: translate(0%, 0%);
+        opacity: 1;
+    }
+}
+
+#mobilenavlogo{
+    justify-content: center;
+    align-items: baseline;
+    z-index: 100;
+    background-color: rgba(242,236,24,1);
+    width: 100%;
+    padding: 0px;
+    height: 90px;
+    display: none;
+}
+
+.mobilenavlogo.homepage{
+    animation: slideintop 1s ease-out;
+    
+}
+
 .navbar{
+
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
-    height: 50px;
-    background-color: rgba(242,236,24,255);
+    height: 60px;
+    background-color: rgba(242,236,24,1);
     color: black;
 }
 
@@ -136,19 +191,39 @@ h1{
     width: 80px;
     justify-content: center;
     align-items: center;
-    color: white;
     padding: 0px 10px 0px 10px;
     height: 100%;
+    font-size: 15px;
+}
+
+a.navbutton{
+    height: 100%;
+    width: 100%;
+}
+
+#home.mobile{
+    background-color: rgb(221, 221, 221);
+}
+#pricing.mobile{
+    background-color: rgb(201, 201, 201);
+}
+#work.mobile{
+    background-color: rgb(221, 221, 221);
 }
 
 .navbutton.desktop{
+    border-radius: 0px;
     display: flex;
-    width: 120px;
+    width: 12vw;
+    min-width: 80px;
+    max-width: 100px;
     justify-content: center;
     align-items: center;
     color: black;
     padding: 0px 10px 0px 10px;
     height: 100%;
+    background-color: rgba(169, 169, 169, 0);
+    box-shadow: 0px 0px 0px 0px black;
     transition: .3s;
 }
 
@@ -157,11 +232,12 @@ h1{
 }
 
 .navbutton.desktop:hover{
-    color: white;
-    width: 170px;
-    background-color: grey;
+    width: 13vw;
+    max-width: 110px;
+    background-color: rgb(247, 247, 247);
     transition: .3s;
 }
+
 
 .navbutton:hover{
     color: darkgrey;
@@ -178,35 +254,108 @@ h1{
     padding-bottom: 50px;
 }
 
+.mainbody.desktop{
+    padding: 0;
+}
+
 .bodycard{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     width: 100%;
-
+    max-width: 1150px;
     background-size: cover;
+}
+
+.bodycard.desktop{
+    flex-direction: row;
+    max-width: none;
+    height: 30vh;
+    min-height: 250px;
+    min-width: 666px;
+    border: none;
 }
 
 .bodycardheader{
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    flex-wrap: wrap;
     font-size: 18px;
     font-weight: bold;
-    height: 160px;
+    height: 110px;
     width: 100%;
-    background-color: rgba(161, 161, 161, 0.808);
+    background-color: rgba(243, 243, 243, 0.452);
 }
+
+.bodycardheader.desktop{
+    height: 100%;
+    max-width: 30%;
+    text-align: right;
+    justify-content: right;
+    padding-right: 20px;
+}
+
 
 .bodycardtextholder{
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: row;
     width: 100%;
-    padding: 15px 0 15px 0;
-    background-color: rgb(226, 226, 226);
+    padding: 35px 0 35px 0;
+    background-image: -webkit-linear-gradient(bottom, rgb(247, 247, 247) 75%, rgb(33, 126, 64) 350%);
     overflow: hidden;
     z-index: 60;
+    height: 100%;
+}
+
+.bodycardtextholder.desktop{
+    padding: 0px 0 0px 0;
+    justify-content: left;
+    padding-left: 20px;
+    margin-top: 1px;
+    background-image: none;
+    background-color: rgb(247, 247, 247);
+    border: 1px rgb(226, 226, 226) solid;
+}
+
+.contactholder{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    padding: 35px 0 35px 0;
+    background-image: -webkit-linear-gradient(bottom, rgb(247, 247, 247) 75%, rgb(33, 126, 64) 350%);
+    overflow: hidden;
+    z-index: 60;
+    height: 100%;
+}
+
+.contactholder.desktop{
+    padding: 0px 0 0px 0;
+    justify-content: center;
+    align-items: start;
+    padding-left: 20px;
+    margin-top: 1px;
+    background-image: none;
+    background-color: rgb(247, 247, 247);
+    border: 1px rgb(226, 226, 226) solid;
+}
+
+.socials{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    text-align: left;
+    flex-direction: row;
+    width: 80%;
+    max-width: 700px;
+    margin: 10px;
+    z-index: 50;
 }
 
 .bodycardtext{
@@ -216,16 +365,29 @@ h1{
     z-index: 50;
 }
 
+@keyframes fadein {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+
 #card1{
-    background-image: url('images/vbs_desc1.jpg');
+    animation: fadein .7s;
+    z-index: 100;
 }
 
 #card2{
-    background-image: url('images/vbs_desc2.jpg');
+    animation: fadein 1s;
+    z-index: 100;
 }
 
 #card3{
-    background-image: url('images/vbs_desc3.jpg');
+    animation: fadein 1.5s;
+    z-index: 100;
+}
+
+#card4{
+    animation: fadein 2s;
+    z-index: 100;
 }
 
 .expanded{
@@ -249,3 +411,49 @@ iframe {
     scrollbar-color: red orange;
     scrollbar-width: thin;
 }
+
+/* Pricing */
+.tier{
+}
+
+.tiertextholder{
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    max-width: 800px;
+    margin: 15px 0 15px 0;
+    padding: 15px 0 15px 0;
+    overflow: hidden;
+    z-index: 60;
+    background: rgb(231, 231, 231);
+    border-radius: 10px;
+}
+
+.tiertext{
+    width: 80%;
+    max-width: 700px;
+    margin: 10px;
+    z-index: 50;
+}
+
+#secondtier{
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 30px 0px black;
+}
+
+#pricingbg{
+    background-image: url('images/deer.jpg');
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+}
+
+#indexbg{
+    background-image: url('images/deer.jpg');
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+}
+
